@@ -10,6 +10,9 @@ Changelog
 - Remove hard dependency on Archetypes.
   [davisagli]
 
+- Add syndication feed types vocabulary
+  [vangheem]
+
 
 2.1.6 (2012-04-09)
 ------------------
